--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -1,13 +1,4 @@
-{
-  "tagname-lowercase": true,
-  "attr-lowercase": true,
-  "attr-value-double-quotes": true,
-  "doctype-first": true,
-  "id-unique": true,
-  "src-not-empty": true,
-  "alt-require": true
-}
- 
+name: CI + GitHub Pages Deployment
  
 permissions: 
   contents: write 
@@ -15,46 +6,46 @@ permissions:
 name: CI + Déploiement GitHub Pages 
  
 on: 
-  push: 
-    branches: [ main ] 
+  push: 
+ branches: [ main ] 
  
 jobs: 
-  build-and-deploy: 
-    runs-on: ubuntu-latest 
+ build-and-deploy: 
+ runs-on: ubuntu-latest 
  
-    steps: 
-    - name: Cloner le dépôt 
-      uses: actions/checkout@v3 
+ steps: 
+ - name: Cloner le dépôt 
+  uses: actions/checkout@v3 
  
-    - name: Installer Node.js 
-      uses: actions/setup-node@v3 
-      with: 
-        node-version: '18' 
+ - name: Installer Node.js 
+  uses: actions/setup-node@v3 
+  with: 
+  node-version: '18' 
  
-    - name: Installer les dépendances 
-      run: npm install 
-       
-    - name: Installer HTMLHint 
-run: npm install -g htmlhint --save-dev
+ - name: Installer les dépendances 
+  run: npm install 
+   
+ - name: Installer HTMLHint 
+  run: npm install -g htmlhint --save-dev
  
-    - name: Vérifier le HTML 
-      run: npx htmlhint . 
+ - name: Vérifier le HTML 
+  run: npx htmlhint . 
  
-    - name: Installer stylelint globalement 
-      run: sudo npm install -g stylelint  
+ - name: Installer stylelint globalement 
+  run: sudo npm install -g stylelint  
  
-    - name: Vérifier le CSS 
-      run: npx stylelint "**/*.css" 
-       
-    - name: Install ESLint 
-      run: npm install -g eslint 
+ - name: Vérifier le CSS 
+  run: npx stylelint "**/*.css" 
+   
+ - name: Install ESLint 
+  run: npm install -g eslint 
  
-    - name: Vérifier le JS 
-      run: npx eslint . 
-       
-    - name: Déployer sur GitHub Pages 
-      uses: peaceiris/actions-gh-pages@v3 
-      with: 
-        github_token: ${{ secrets.GITHUB_TOKEN }} 
-        publish_dir: . 
+ - name: Vérifier le JS 
+  run: npx eslint . 
+   
+ - name: Déployer sur GitHub Pages 
+  uses: peaceiris/actions-gh-pages@v3 
+  with: 
+  github_token: ${{ secrets.GITHUB_TOKEN }} 
+  publish_dir: . 
  
