--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -5,7 +5,7 @@ name: CI + Déploiement GitHub Pages
  
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
  
 jobs:
   build-and-deploy:
